final commit before Wouter review, with conclusions and spell check

--- a/report/references.bib
+++ b/report/references.bib
@@ -69,7 +69,7 @@
     title={Hackage page for the ForSyDe library},
     month={November},
     year={2013},
-    howpublished={\url{https://ghc.haskell.org/trac/ghc/wiki/TypeNats}},
+    howpublished={\url{http://hackage.haskell.org/package/ForSyDe}},
 }
 
 @incollection{coquet2011,
