--- a/report/section2-methodology.tex
+++ b/report/section2-methodology.tex
@@ -24,7 +24,7 @@
             \item[ForSyDe] The Haskell ForSyDe library is an EDSL based on the ``Formal System
             Design'' approach\cite{forsyde1999}, developed at the swedish Royal Institute of
             Technology (KTH).  It offers both shallow and deep embeddings, and provides a
-            significantly different approach to circuit modelling, using \emph{Template Haskell} to
+            significantly different approach to circuit modeling, using \emph{Template Haskell} to
             allow the designer to describe combinational functions with Haskell's own constructs.
 
             \item[Coquet] The Coquet\cite{coquet2011} EDSL differs from the other 2 mainly because
@@ -59,7 +59,7 @@
             \forall b \forall \text{\textit{sel}} \left( \text{MUX}(a,b,\text{\textit{sel}}) = a
             \right) \vee \left( \text{MUX}(a,b,\text{\textit{sel}}) = b \right) \]
 
-            \item[Genericity] Whether (and how well) the EDSL allows the modelling of \emph{generic}
+            \item[Genericity] Whether (and how well) the EDSL allows the modeling of \emph{generic}
             or \emph{parameterized} circuits. An example of a generic circuit is a multiplexer with
             2 n-bit inputs and 1 n-bit output, or a multiplexer with n 1-bit inputs and 1 1-bit
             output. Besides parametrization in the \emph{size} if inputs and outputs, we will also
