--- a/report/section3-modeled-circuits.tex
+++ b/report/section3-modeled-circuits.tex
@@ -120,7 +120,7 @@
         The temporal behaviour of this memory block is as follows: At any point in time, the output
         \texttt{out} holds the value stored at the memory location specified by \texttt{address}.
         If the \texttt{load} bit is high, then the value at \texttt{in} is loaded into the memory
-        word specificied by \texttt{address}. The loaded value will then be emitted on the output at
+        word specified by \texttt{address}. The loaded value will then be emitted on the output at
         the \textbf{next} clock cycle.
 
     \subsection{Circuit 3: The Hack CPU}
