reading review of sections 1,2,3 and a little 4

--- a/report/section2-methodology.tex
+++ b/report/section2-methodology.tex
@@ -7,8 +7,8 @@
     \emph{sample set of circuits} used as case studies.
 
     We tried to model all circuits in all EDSLs considered, and as similarly as possible in each
-    EDSL. To avoid using any of the analyzed EDSLs as ``base'' for analysis, we provide a neutral,
-    behavioural description of the circuits.
+    EDSL. To avoid using any of the analyzed EDSLs as ``base'' for analysis, we provide a neutral
+    and behavioural description of the circuits.
 
     \subsection{The languages}
     \label{subsec:languages}
@@ -46,7 +46,6 @@
         Without further ado, the following aspects are considered in the analysis:
 
         \begin{description}
-
             \item[Simulation] The capability of simulating circuits modeled in the EDSL (and the
             ease with which it can be performed). Simulation is understood in this context as
             \emph{functional} simulation, i.e, obtaining the outputs calculated by the circuit for
@@ -81,4 +80,5 @@
             model circuits that consume and produce custom datatypes, or might be interested in
             extracting \emph{metrics} from a circuit such as power consumption, number of elementary
             gates, etc.
+
         \end{description}
