some of the corrections pointed by Wouter

--- a/report/references.bib
+++ b/report/references.bib
@@ -41,6 +41,13 @@
     URL={http://journals.cambridge.org/article_S0956796812000214},
 }
 
+@article{claessen-thesis,
+    title={An embedded language approach to hardware description and verification},
+    author={Claessen, Koen},
+    journal={Licentiate thesis, Chalmers University of Technology, Gothenburg, Sweden},
+    year={2000}
+}
+
 @inproceedings{observable-sharing-1999,
     author = {Claessen, Koen and Sands, David},
     title = {Observable Sharing for Functional Circuit Description},
