More corrections from Wouter implemented.

--- a/report/report.tex
+++ b/report/report.tex
@@ -1,15 +1,16 @@
 \documentclass[a4paper]{article}
 
+\usepackage{a4}
 \usepackage{times}
 \usepackage[T1]{fontenc}
-\usepackage{a4}
 \usepackage{graphicx}
 \usepackage{mathtools}
 \usepackage{amssymb}  % lots of math symbols
-\usepackage{hyperref}
+\usepackage{hyperref}  % ref
 \usepackage{color}
 \usepackage{booktabs}  % nice tables
 \usepackage{float}
+\usepackage{acronym}
 
 %% Unicode support
 \usepackage[utf8x]{inputenc}
