--- a/report/section3-modeled-circuits.tex
+++ b/report/section3-modeled-circuits.tex
@@ -43,7 +43,7 @@
         as the output) is a 16-bit long word (interpreted as two's-complement signed integer). It is
         capable of computing several functions, and the choice of which function to compute is made
         by setting the ALU's 6 \emph{control bits}. To become more familiar with this circuit, let's
-        first take a look at its block diagram, shown in figure \ref{fig:alu-block}
+        first take a look at its block diagram, shown in figure~\ref{fig:alu-block}
 
         \begin{figure}[h!]
             \centerline{\includegraphics[width=0.5\textwidth]{imgs/alu-block.pdf}}
@@ -99,7 +99,7 @@
         circuit is nothing more than a register bank.
 
         All the input and output ports of the circuit are pictured in its block diagram, shown
-        in figure \ref{fig:ram-block}.
+        in figure~\ref{fig:ram-block}.
 
         \begin{figure}[h!]
             \centerline{\includegraphics[width=0.3\textwidth]{imgs/ram-block.pdf}}
@@ -134,7 +134,7 @@
         different storage components and signal pathways for instructions and data. Therefore, the
         Hack CPU expects to be connected to \emph{two} memory blocks, the instruction memory and the
         data memory. Having this in mind facilitates the understanding of the CPU's block diagram,
-        shown in figure \ref{fig:cpu-block}
+        shown in figure~\ref{fig:cpu-block}
 
         \begin{figure}[H]
             \centerline{\includegraphics[width=0.85\textwidth]{imgs/cpu-block.pdf}}
