--- a/report/section4-edsls.tex
+++ b/report/section4-edsls.tex
@@ -25,7 +25,7 @@
         This current version of Chalmers Lava is the one in which our case study is based.
 
         As already said, Lava uses a \emph{deep embedding}, and the datatype used to represent a
-        circuit is \texttt{Signal}, defined in listing \ref{lst:lava-signal}.
+        circuit is \texttt{Signal}, defined in listing~\ref{lst:lava-signal}.
 
         \begin{listing}[h!]
             \haskellfile{code/lava/lava-signal.hs}
@@ -42,7 +42,7 @@
 
         Having defined a circuit operating on values of a type \texttt{a} to have type
         \texttt{Signal a}, then there are several circuit combinators provided by Lava, which take
-        circuits as inputs and provide circuits as outputs. For example, on figure
+        circuits as inputs and provide circuits as outputs. For example, on listing
         \ref{lst:lava-boolean-combinators} we show some boolean circuit combinators:
 
         \begin{listing}[h!]
@@ -99,7 +99,7 @@
             \end{itemize}
 
             Now, after having defined all the necessary parts, lets take a look at the ALU circuit
-            itself in listing \ref{lst:lava-circuit1-model-alu}:
+            itself in listing~\ref{lst:lava-circuit1-model-alu}:
 
             \begin{listing}[h!]
                 \haskellfile{code/lava/lava-circuit1-model-alu.hs}
@@ -117,7 +117,7 @@
             the ALU circuit in the book "The Elements of Computing Systems"\cite{nand2tetris-book}
             has a pretty extensive truth table to test the circuit model, which was used to simulate
             the ALU. However, let's take a look at a simpler simulation case, that of a half-adder,
-            in figure \ref{lst:lava-circuit1-simulation-hadd}:
+            in listing~\ref{lst:lava-circuit1-simulation-hadd}:
 
             \begin{listing}[h!]
                 \haskellfile{code/lava/lava-circuit1-simulation-hadd.hs}
@@ -145,10 +145,9 @@
             \end{haskellcode}
 
             This \texttt{Eq} instance implements a sort of \emph{reference equality}, instead of the
-            more usual \emph{value equality}. This reference equality behaviour is, however, the
-            only desirable definition in the context of how Lava represents circuits: a more
-            traditional (recursive) definition of equality could result in non-termination when
-            inspecting circuits with loops.
+            more usual \emph{value equality}. This behaviour is, however, desirable when we consider
+            how Lava represents circuits: a more traditional (recursive) definition of equality
+            could result in non-termination when comparing circuits with loops.
 
             Even with the drawback of not having \emph{automated} testing, we can say that Lava does
             provide good \textbf{simulation} capabilities, with an interface that is easy to
@@ -164,9 +163,9 @@
                 output}, which -- for the property to be true -- needs to be \emph{true} for any
             combination of inputs (these properties are called \emph{safety properties}). Lava
             performs the verification by converting the circuit model to a CNF logical formula and
-            executing an external SAT solver on the negation of the formula: the property being
-            verified is \emph{valid} if and only if the negated formula is unsatisfiable. The
-            verification for the incrementer introduces another detail of this kind of verification:
+            executing an external SAT solver on the negation of the formula: the property is
+            \emph{valid} if and only if the negated formula is unsatisfiable. The verification for
+            the incrementer introduces another detail of this kind of verification:
 
             \haskellfile{code/lava/lava-circuit1-verify-incrementer.hs}
 
@@ -177,14 +176,14 @@
             verify a finite number of particular instances of the circuit.
 
             Moving on to circuit 2 (the RAM block), we will take a look at how Lava handles
-            sequential circuits. The ``fundamental''\footnote{here, \emph{fundamental} means that
-                all sequential circuits have -- directly or indirectly -- \texttt{delay} as one of
-                its building blocks} sequential circuit in Lava is \texttt{delay}.  It takes two
-            boolean signals as input and outputs a single boolean signal. Its semantics is that the
-            output signal will correspond tho the input signal \emph{delayed} by one clock cycle,
-            with the other parameter being the first value of the output.  Using this fundamental
-            circuit, we modeled the first building block of our hierarchy of memory elements: a
-            1-bit register with input and load signals:
+            sequential circuits. The ``fundamental''\footnote{\emph{fundamental} means that all
+                sequential circuits use -- directly or indirectly -- \texttt{delay} as a building
+                block} sequential circuit in Lava is \texttt{delay}.  It takes two boolean signals
+            as input and outputs a single boolean signal. Its semantics is that the output signal
+            will correspond tho the input signal \emph{delayed} by one clock cycle, with the other
+            parameter being the first value of the output.  Using this fundamental circuit, we
+            modeled the first building block of our hierarchy of memory elements: a 1-bit register
+            with input and load signals:
 
             \haskellfile{code/lava/lava-circuit2-model-reg.hs}
 
@@ -229,7 +228,7 @@
             in more detail on section \ref{subsec:hack-cpu-circuit}). The CPU circuit is mostly
             combinational, as it contains \emph{no form of pipelining} and exactly one instruction
             is executed per clock cycle. However, there is one sequential component of the CPU: the
-            \emph{program counter}, shown in figure \ref{lst:lava-circuit3-model-pc}:
+            \emph{program counter}, shown in listing~\ref{lst:lava-circuit3-model-pc}:
 
             \begin{listing}[h!]
                 \haskellfile{code/lava/lava-circuit3-model-pc.hs}
@@ -243,7 +242,8 @@
             CPU itself: most importantly, we need an \emph{instruction decoder}, responsible for
             interpreting each \texttt{Hack} instruction and outputting several \emph{control bits}
             that are used to direct the data flow inside the CPU during each instruction execution
-            cycle:
+            cycle. The Lava code for the decoder can be seen on listing
+            \ref{lst:lava-circuit3-model-decoder}.
 
             \begin{listing}[h!]
                 \haskellfile{code/lava/lava-circuit3-model-instruction-decoder.hs}
@@ -251,17 +251,27 @@
                     \label{lst:lava-circuit3-model-decoder}}
             \end{listing}
 
-            Here we notice again some limitations of Lava with regards to datatypes: We are limited
-            to lists and tuples of \texttt{Signal Bool} (to keep the circuit synthesizable). Here we
+            Here we notice again some limitations of Lava with regards to datatypes: we are limited
+            to lists and tuples of \texttt{Signal Bool} (to keep the circuit synthesizable). We
             decided to model the \emph{Hack} instruction itself and the control flags as tuples, to
             prevent size-related runtime errors. However, using tuples made the model more
-            ``cluttered'', as tuples are \emph{not} data structures prone to slicing and regrouping.
+            ``cluttered'', as tuples are \emph{not} particularly prone to \emph{slicing} and
+            \emph{regrouping} operations.
+
+            The values \texttt{aFlag}, \texttt{cAM}, \texttt{cDest}, etc., in the definition of
+            \texttt{instructionDecoder} are all contiguous regions of the input binary word,
+            therefore the purpose of the \texttt{intructionDecoder} block is just to ``split'' the
+            input word into some subregions with a defined meaning. However, the way in which the
+            block is modelled (by pattern matching and then selecting bits \emph{individually} for
+            the output tuples) does not clearly transmit the intention of the designer to someone
+            reading the model.
 
             Using \emph{fixed-length vectors}, perhaps based on the recent ``Type-level Naturals''
             GHC \footnote{The Glorious Glasgow Haskell Compilation System:
                 \url{http://www.haskell.org/ghc}} extension \cite{website:ghc-typenats} (introduced
             in GHC 7.6 and being improved for GHC 7.8) would make modeling in Lava \emph{safer} and
-            more comfortable.
+            more comfortable. We could simply say that \texttt{cJump} is the ``slice'' located
+            between bits 13 and 15 of the input word, and so forth.
 
 
     \subsection{ForSyDe}
@@ -299,53 +309,58 @@
 
         \subsubsection{Models of Computation}
         \label{subsubsec:forsyde-mocs}
+            \acrodef{MoC}{Model of Computation}
             The definition of signal given above is purposefully ``vague'' mainly because the
-            precise definition of signals depends on the \emph{model of computation} being used.
-            ForSyDe has (currently) process constructors for the following models of computation:
+            precise definition of meaning for signals depends on the \ac{MoC} being used.
+            ForSyDe has (currently) process constructors for the following \acp{MoC}:
 
             \begin{description}
-                \item[Synchronous] All processes in this MoC have a global, implicit \texttt{clock}
-                    input, and the tags in the signals are increasing natural numbers. Therefore, a
-                    signal can be viewed as a \emph{stream} of values, one for each clock cycle. At
-                    each clock cycle, \emph{all} processes consume exactly one value from each of
-                    its inputs and produce one value at each of its outputs.
+                \item[Synchronous] All processes in this \ac{MoC} have a global, implicit
+                    \texttt{clock} input, and the tags in the signals are increasing natural
+                    numbers. Therefore, a signal can be viewed as a \emph{stream} of values, one for
+                    each clock cycle. At each clock cycle, \emph{all} processes consume exactly one
+                    value from each of its inputs and produce one value at each of its outputs.
 
-                \item[Untimed] In the untimed MoC, the processes fire individually and there is no
-                    notion of global clock. A process only evaluates when its inputs have a minimum
-                    number of values \emph{ready} to be read. The number of needed values can vary
-                    per input, but is constant throughout execution.
+                \item[Untimed] In the untimed \ac{MoC}, the processes fire individually and there is
+                    no notion of global clock. A process only evaluates when its inputs have a
+                    minimum number of values \emph{ready} to be read. The number of needed values
+                    can vary per input, but is constant throughout execution.
 
-                \item[Continuous] The Continuous MoC interprets signals as continuous, one-variable
-                    piecewise functions of time. It can be used to model some forms of analog
-                    circuits, for example.
+                \item[Continuous] The Continuous \ac{MoC} interprets signals as continuous,
+                    one-variable piecewise functions of time. It can be used to model some forms of
+                    analog circuits, for example.
             \end{description}
 
             \label{ref:forsyde-moc-synch}
-            Among all MoCs, perhaps the most ``notable'' one is the Synchronous MoC, because it
-            reflects the usual interpretation of signals as wires and the vast majority of digital
-            designs nowadays having a global clock. Also, all of our studied circuits were modeled
-            in ForSyDe using the Synchronous MoC. Therefore, it is interesting to take a deeper look
-            at it.
+            Among all \acp{MoC}, perhaps the most ``notable'' one is the Synchronous \ac{MoC},
+            because it reflects the usual interpretation of signals as wires and the vast majority
+            of digital designs nowadays having a global clock. Also, all of our studied circuits
+            were modeled in ForSyDe using the Synchronous \ac{MoC}. Therefore, it is interesting to
+            take a deeper look at it.
 
             First, lets take a look at the behaviour of a system which has an one integer input port
             and one integer output, and in which the value of the output is equal to the input plus
             4. The interface and internal architecture of this system (\emph{addFour}) is depicted
-            in listing \ref{lst:forsyde-addFour}.
+            in listing~\ref{lst:forsyde-addFour}.
 
             \begin{figure}[h!]
                 \includegraphics[width=1.0\textwidth]{imgs/forsyde-addFour.pdf}
-                \caption{The addFour circuit, example of usage of the Synchronous MoC
+                \caption{The addFour circuit, example of usage of the Synchronous \ac{MoC}
                     \label{lst:forsyde-addFour}}
             \end{figure}
 
-            In this system, each of the constituent processes is built using the \texttt{mapSY}
-            process constructor, a constructor of the synchronous model of computation (its name
-            ends in ``SY''). It takes a combinational function (in this case ``+1'') and evaluates
-            it for each event in the input signal, generating a corresponding event in the output
-            signal.
+            Please bear in mind that this implementation is not by far an efficient method of adding
+            4 to an integer. We use this architecture only as a simple example in which several
+            characteristics of the synchronous \ac{MoC} can be spotted.
 
-            Another characteristic of ForSyDe which makes the synchronous MoC even more significant
-            is that only systems that are modeled \textbf{exclusively} with process constructors of
+            The \texttt{addFour} system is built with 4 constituent processes, and each of them is
+            built using the \texttt{mapSY} process constructor, a constructor of the synchronous
+            \ac{MoC} (its name ends in ``SY''). It takes a combinational function (in this case
+            ``+1'') and evaluates it for each event in the input signal, generating a corresponding
+            event in the output signal.
+
+            Another characteristic of ForSyDe which makes the synchronous \ac{MoC} even more
+            significant is that only systems built \textbf{exclusively} with process constructors of
             the synchronous model can be translated into VHDL by ForSyDe.
 
             ForSyDe is a \emph{deeply embedded} EDSL, but it takes a significantly different
@@ -440,13 +455,13 @@
             restrictions are:
 
             \begin{description}
-                \item[``Point-full'' notation] Declarations with points-free notation are not
+                \item[Pointed notation] Declarations with point-free notation are not
                     accepted as synthesizable
 
                 \item[Single-clause] To be synthesizable, a \texttt{ProcFun} cannot have multiple
                     clauses, and it cannot have \texttt{let} or \texttt{where} blocks.  This
                     essentially forbids recursion inside \texttt{ProcFun}s. Pattern matching is
-                    still possible by using the \texttt{case} construct.
+                    possible by using the \texttt{case} construct.
             \end{description}
 
             Further details on these restrictions and how they constrain circuit design are shown
@@ -465,8 +480,8 @@
             Notice that we \emph{reuse} the \texttt{incrFunc} process function, as it does exactly
             what we need. The \texttt{sourceSY} constructor takes as parameters a process function
             $f$ and an initial value $x$, and has as output signal the sequence $ [x, f(x), f(f(x)),
-            f(f(f(x))), \ldots] $. This behaviour is equivalent to what the function
-            \texttt{iterate} from the Haskell Prelude does.
+            f(f(f(x))), \ldots] $. This behaviour is isomorphic to the behaviour of the function
+            \texttt{iterate} from the Haskell Prelude.
 
 
         \subsubsection{Circuits modeled}
@@ -494,7 +509,7 @@
             \end{description}
 
             Let's start our analysis by looking at the \emph{high-level} model for circuit 1, the
-            ALU, on listing \ref{lst:forsyde-circuit1-model-alusim}:
+            ALU, on listing~\ref{lst:forsyde-circuit1-model-alusim}:
 
             \begin{listing}[h!]
                 \haskellfile{code/forsyde/forsyde-circuit1-model-alusim.hs}
@@ -530,9 +545,9 @@
                     ALU has to be a process of its own.
 
                 \item The parallel and serial combination of processes require several steps of
-                    ``zipping/unzipping'' which have nothing to do with the actual computation.
-                    They only adapt the interfaces of the processes to ``fit'' together, and
-                    transform between \textbf{tuples of signals and signals of tuples}. We will
+                    ``zipping'' and ``unzipping'' of signals, which have nothing to do with actual
+                    computation.  They only adapt the interfaces of the processes to fit together,
+                    and transform between \textbf{tuples of signals and signals of tuples}. We will
                     see the same problem when handling vectors of signals.
             \end{itemize}
 
@@ -540,10 +555,11 @@
             need for manual \emph{name management}. Each process in ForSyDe must have a
             user-provided unique identifier: on the one hand it results in readable and modular VHDL
             netlists, but on the other hand it forces the hardware designer to work at a lower level
-            than desired, making the design more error-prone.
+            than desired, making the design more error-prone. In Lava, name management is avoided
+            entirely, as the circuit models are flattened during netlist generation.
 
-            The issue of name management, along with the usage of fixed-length vectors, will become
-            clearer as we analyze our second circuit: a RAM block of 64 lines.
+            The issue of name management in ForSyDe, along with the usage of fixed-length vectors,
+            will become clearer as we analyze our second circuit: a RAM block of 64 lines.
 
             First of all, we model a n-bit register, which is not so different from the n-bit
             register we modeled in Lava:
@@ -552,7 +568,7 @@
 
             The next needed part for the RAM is a 64-to-1 multiplexer, to choose which of the RAM
             lines to select as output, depending on the address. We modeled a whole hierarchy of
-            multiplexers upto the one we needed (64-to-1): starting with a 2-to-1 multiplexer, than
+            multiplexers up to the one we needed (64-to-1): starting with a 2-to-1 multiplexer, than
             building a 4-to-1 using 2-to-1 as components, 16-to-1 using 4-to-1 and finally 64-to-1
             using 16-to-1 and 4-to-1. We only show the first two degrees of the hierarchy in listing
             \ref{lst:forsyde-circuit2-muxes}.
@@ -587,7 +603,7 @@
             makes for pretty modular VHDL code.
 
             Let's now finally look at the top-level ForSyDe model for circuit 2, the RAM block.  The
-            code is presented at listing \ref{lst:forsyde-circuit2-ram}.
+            code is presented at listing~\ref{lst:forsyde-circuit2-ram}.
 
             \begin{listing}[h!]
                 \haskellfile{code/forsyde/forsyde-circuit2-ram.hs}
@@ -630,8 +646,7 @@
             architecture.
 
             Having defined the model for the program counter, we proceeded to test its behaviour,
-            according to the table of test cases present in chapter 5\cite{nand2tetris-chapter-cpu}
-            of the book defining the circuits:
+            according to the table of test cases in \cite{nand2tetris-chapter-cpu}.
 
             \haskellfile{code/forsyde/forsyde-circuit3-pc-sim.hs}
 
@@ -640,7 +655,7 @@
             could \emph{not} be done in Lava.
 
             With the program counter defined and tested, we proceeded to model the instruction
-            decoder, whose code is presented on listing \ref{lst:forsyde-circuit3-decoder}.
+            decoder, whose code is presented on listing~\ref{lst:forsyde-circuit3-decoder}.
 
             \begin{listing}[h!]
                 \haskellfile{code/forsyde/forsyde-circuit3-decoder.hs}
@@ -659,15 +674,15 @@
             Now we go over the last needed subcomponent of the CPU we needed to model: a logical
             block which decides when to set the program counter and cause a jump to occur. The
             output of this circuit is connected to the \texttt{set} input of the program counter, as
-            can be seen in figure \ref{fig:cpu-parts}. The code for the ForSyDe version of the
+            can be seen in figure~\ref{fig:cpu-parts}. The code for the ForSyDe version of the
             \texttt{decideJump} block is shown below:
 
             \haskellfile{code/forsyde/forsyde-circuit3-jump.hs}
 
             The decision on whether or not to perform a jump is taken based on two parameters: the
             first is a set of \texttt{jump selection bits} (named in the model as \texttt{JumpType},
-            and comes from the instruction. These bits indicate in \emph{which conditions} a jump is
-            to be performed. If they are all low, then no jump is performed, and if they are all
+            and comes from the instruction). These bits indicate in \emph{which conditions} a jump
+            is to be performed. If they are all low, then no jump is performed, and if they are all
             high, an \emph{unconditional jump} will happen.  The second input for the
             \texttt{decideJump} circuit is the set of flags coming from the ALU. When some
             conditional jump is described in the \texttt{JumpType} bits, it will only actually
@@ -676,7 +691,7 @@
             omit the test code here for brevity.
 
             Having all the necessary parts we could then model the Hack CPU itself, whose code is
-            presented on listing \ref{lst:forsyde-circuit3-cpu}.
+            presented on listing~\ref{lst:forsyde-circuit3-cpu}.
 
             \begin{listing}[h!]
                 \haskellfile{code/forsyde/forsyde-circuit3-cpu.hs}
@@ -734,14 +749,14 @@
         goal of Coquet. How this goal is achieved and the modelling of our studied circuits in
         Coquet is discussed in the following subsections.
 
-        \subsubsection{Modeling circuits}
+        \subsubsection{Modelling circuits}
         \label{subsubsec:coquet-modelling}
             Coquet is a deep-embedded DSL, thus it represents circuits as a datatype. By using
             dependent types, a designer modeling a circuit in Coquet is able to prevent certain
-            kinds of ``errors'' much earlier in the design process, because the
-            \emph{well-formedness} is guaranteed by construction, i.e, every circuit built using the
-            constructors provided by Coquet are well-formed by definition. Let's take a look at the
-            \emph{Circuit} data type declaration:
+            kinds of mistakes much earlier in the design process, because the \emph{well-formedness}
+            is guaranteed by construction, i.e, every circuit built using the constructors provided
+            by Coquet are well-formed by definition. Let's take a look at the \emph{Circuit} data
+            type declaration, presented in listing \ref{lst:coquet-circuit-type}.
 
             \begin{listing}[h!]
                 \coqfile{code/coquet/coquet-definition-circuit.v}
@@ -874,7 +889,7 @@
             -- they are in this way \emph{isomorphic} to cartesian products, and this isomorphism
             is indeed used to facilitate proofs of correctness in Coquet, as will be seen later.
             The definition of the meaning relation in Coquet is presented on
-            figure~\ref{lst:coquet-definition-semantics}.
+            listing~\ref{lst:coquet-definition-semantics}.
 
             \begin{listing}[h!]
                 \coqfile{code/coquet/coquet-definition-semantics.v}
@@ -931,7 +946,7 @@
             maps to only one output), while with the relational model we can also write
             non-deterministic specifications. The definitions for the Coquet classes
             \texttt{Realise} and \texttt{Implement} are shown in
-            figure~\ref{lst:coquet-definition-realise-implement}.
+            listing~\ref{lst:coquet-definition-realise-implement}.
 
             \begin{listing}[h!]
                 \coqfile{code/coquet/coquet-definition-realise-implement.v}
