--- a/report/section4-edsls.tex
+++ b/report/section4-edsls.tex
@@ -752,11 +752,11 @@
         \subsubsection{Modelling circuits}
         \label{subsubsec:coquet-modelling}
             Coquet is a deep-embedded DSL, thus it represents circuits as a datatype. By using
-            dependent types, a designer modeling a circuit in Coquet is able to prevent certain
-            kinds of mistakes much earlier in the design process, because the \emph{well-formedness}
-            is guaranteed by construction, i.e, every circuit built using the constructors provided
-            by Coquet are well-formed by definition. Let's take a look at the \emph{Circuit} data
-            type declaration, presented in listing \ref{lst:coquet-circuit-type}.
+            dependent types, it is able to prevent certain classes of mistakes much earlier in the
+            design process, because the \emph{well-formedness} is guaranteed by construction, i.e,
+            every circuit built using the constructors provided by Coquet are well-formed by
+            definition. Let's take a look at the \emph{Circuit} data type declaration, presented in
+            listing \ref{lst:coquet-circuit-type}.
 
             \begin{listing}[h!]
                 \coqfile{code/coquet/coquet-definition-circuit.v}
@@ -770,18 +770,23 @@
             input and output ports: How many of them there are, how are they grouped and how are
             they named.
 
-            There are 2 \emph{atomic} constructors from which an element of \texttt{Circuit} can
-            be built and 3 \emph{combinators}, which build a circuit based on other circuit(s).
-            By observing the serial and parallel composition combinators (\texttt{Ser} and
-            \texttt{Par}, respectively), we notice that the input and output types match exactly
-            as expected.
+            There are 2 \emph{atomic} constructors from which an element of \texttt{Circuit} can be
+            built and 3 \emph{combinators}, which build a circuit based on other circuit(s).  These
+            constructors are fundamentally different from the constructors of the circuit datatype
+            in Lava: in Lava, the constructors represented several different logic gates, while in
+            Coquet they denote the \emph{structure} of the circuit. We can say that in Lava (and
+            ForSyDe) the structure of the circuit is expressed in the \emph{host} language
+            (Haskell), while in Coquet the structure-defining constructs are part of the DSL.
 
             The 2 atomic constructors constrain the types \texttt{n} and \texttt{m} by requiring
             them to have instances of the ``Fin'' type class, i.e, they have to be \emph{finite}
             types (types from which a finite list of unique elements can be obtained). This
             constraint is important given the interpretation that these types (\texttt{n} and
             \texttt{m}) have: each element of \texttt{n} (respectively \texttt{m}) stands for an
-            input (respectively output) ``wire'' in the circuit interface.
+            input (respectively output) ``wire'' in the circuit interface. Furthermore, By observing
+            the serial and parallel composition combinators (\texttt{Ser} and \texttt{Par},
+            respectively), we notice that the input and output types are matched exactly as
+            expected.
 
             The case of the ``Atom'' constructor is particularly revealing of how Coquet works: this
             constructor is parameterized by an \emph{instance} of the type class \texttt{Techno} for
@@ -804,11 +809,14 @@
             underlying fundamental gate in this case.
 
             Below the definition of the circuit itself we state and prove the fact that our circuit
-            implements the desired function (boolean negation, \texttt{negb}). More details on
-            exactly what is meant by ``implements'', as well as the workings of plugs and tags, are
-            exposed further ahead. A walk through of proofs in Coquet, where we explain the
-            ``\texttt{tac}'' tactic, is given in section~\ref{subsubsec:coquet-circuits}. Now let's
-            take a look at a half-adder described in Coquet:
+            implements the desired function (boolean negation, \texttt{negb}). The proof object is
+            an instance of the \texttt{Implement} type class. The parameters of \texttt{Implement}
+            are the circuit of which we want to prove correctness, the function which the circuit
+            should implement, along with isomorphisms for the input and output types. More details
+            on how exactly the \texttt{Implement} class is defined are exposed further ahead. A walk
+            through of proofs in Coquet, where we explain the ``\texttt{tac}'' tactic, is given in
+            section~\ref{subsubsec:coquet-circuits}. Now let's take a look at a half-adder described
+            in Coquet:
 
             \coqfile{code/coquet/coquet-spec-halfadder.v}
 
@@ -885,7 +893,7 @@
             For a circuit type \texttt{Circuit n m} and considering \texttt{𝕋} as the type of
             what is carried in the wires, we can define the type \emph{ins} (stands for
             ``inputs'') as $n \rightarrow 𝕋$ and \emph{outs} as $m \rightarrow 𝕋$. These are
-            functions that, for each input/output port, provide the a value present at that port
+            functions that, for each input/output port, provide the value present at that port
             -- they are in this way \emph{isomorphic} to cartesian products, and this isomorphism
             is indeed used to facilitate proofs of correctness in Coquet, as will be seen later.
             The definition of the meaning relation in Coquet is presented on
@@ -912,14 +920,17 @@
         Semantics y middles outs
             \end{coqcode}
 
-            While the meaning relation defines exactly the behaviour of a circuit, it is too
-            low-level. We want to be able to express our \emph{specification} for circuit behaviour
-            in a \emph{higher level} of abstraction -- after all, the whole point of proving
-            correctness is making sure that the circuit we are modeling is \emph{equivalent} (in a
-            sense) to a specification that we \emph{assume as correct}.
+            While the meaning relation defines exactly the behaviour of a circuit, it has some
+            problems. First of all, it is not an \emph{executable} specification, i.e, we cannot use
+            it directly to simulate the circuit on a set of inputs. Furthermore, the meaning
+            relation is too \emph{low-level}: we want to be able to express our specification in a
+            \emph{higher level} of abstraction -- after all, the whole point of proving correctness
+            is making sure that the circuit we are modeling is \emph{equivalent} (in a sense) to a
+            specification that we \emph{assume as correct}.
 
-            Coquet offers some tools to help the user in this direction. First of all, it offers the
-            designer two kinds of abstraction to facilitate writing high-level specifications:
+            Coquet offers some tools to overcome these weaknesses of the meaning relation. First of
+            all, it offers the designer two kinds of abstraction to facilitate writing higher-level
+            specifications:
 
             \begin{description}
                 \item[Data abstraction] The meaning relation (\texttt{Semantics}) for a circuit is a
@@ -1021,7 +1032,7 @@
             Coquet, we mentioned that one of the circuit constructors (\texttt{Plug}) is meant to be
             used to ``adapt'' the interface of two circuits which we need to combine.
 
-            In example of \texttt{FADD}, all the necessary plugs involved only regropuing of ports
+            In the example of \texttt{FADD}, all the necessary plugs involved only regropuing of ports
             (they are all \emph{associativity plugs}) and, in these cases, the plug functions are
             fully defined by their type, which allows us to avoid writing the functions ourselves
             and let Coq find the terms using \emph{proof search}. That's why we use Coq's
@@ -1029,6 +1040,13 @@
             \emph{holes} where the plug functions should be (we omit the full \texttt{Rewire} lines
             for brevity), and we need to ``fill'' each of these holes after defining \texttt{FADD}
             -- that is being done in each of the \texttt{Next Obligation} blocks.
+
+            There are two \texttt{Obligation}s generated for each \texttt{Rewire} block: one is the
+            definition of the plug itself and the other is an auxiliary proof. Proof search is used
+            to find the plug satisfying the type (a function \emph{from outputs to inputs}, thus
+            avoiding short-circuits), and we also provide an (auxiliary) proof that the plug is
+            equivalent to a certain function \emph{from inputs to outputs} (as functions from inputs
+            to outputs are easier for humans to understand).
 
             The correctness proof for \texttt{FADD} uses the exact same tactics as the one for
             \texttt{HADD}, we only include it here for completeness:
